--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,26 @@
 spring.application.name=QuickCommerceBackend
-# Server Port
-server.port=8083
 
-# MySQL Configuration (Auto-create DB if not exists)
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db?createDatabaseIfNotExist=true
+server.port=8080
+
+
+# DATABASE CONFIG (MySQL)
+spring.datasource.url=jdbc:mysql://localhost:3306/quickcommerce
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=khan
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
 
-# Mail Configuration
-spring.mail.host=smtp.gmail.com
+
+logging.level.org.springframework=INFO
+
+
+spring.mail.host=smtp.gmail.com 
 spring.mail.port=587
-spring.mail.username=your_email@gmail.com
-spring.mail.password=your_email_password
+spring.mail.username=khanfaiztech1609@gmail.com
+spring.mail.password= uvit bhjr piiv gowm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
