--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,7 @@ spring.mail.password=your_email_password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Max total request size (e.g., 10MB)
+spring.servlet.multipart.max-request-size=10MB
+
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
