--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,42 +1,29 @@
 spring.application.name=QuickCommerceBackend
+
 # Server Port
 server.port=8083
-<<<<<<< HEAD
 
-# MySQL Configuration (Auto-create DB if not exists)
+# MySQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db?createDatabaseIfNotExist=true
-=======
-# application.properties
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
->>>>>>> 94732845b6a5b1169b32044125aa917fa21699a2
 spring.datasource.username=root
-<<<<<<< HEAD
-spring.datasource.password=simon
-=======
-<<<<<<< HEAD
-spring.datasource.password=ahmad1234
-=======
-spring.datasource.password=1243
->>>>>>> 37c4d949c14e202264ad284e1d9136bccc8c99c0
->>>>>>> 086e0299b0fc0724ff0c5541584be467e61607c0
+spring.datasource.password=root
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# Email Config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=mdsoyab399@gmail.com
 spring.mail.password=fabr kvve zpwv scgo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-<<<<<<< HEAD
-
-# Max total request size (e.g., 10MB)
-spring.servlet.multipart.max-request-size=10MB
-
-spring.web.resources.static-locations=classpath:/static/,file:uploads/
-=======
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.transport.protocol=smtp
 spring.mail.debug=true
 
->>>>>>> 086e0299b0fc0724ff0c5541584be467e61607c0
+# Max total request size (optional)
+spring.servlet.multipart.max-request-size=10MB
+
+# Static resource mapping
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
